--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "find-the-treasure",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "http-proxy-middleware": "^2.0.6",
     "leaflet": "^1.9.3",
     "leaflet-control-geocoder": "^2.4.0",
     "react": "^18.2.0",
