--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "find-the-treasure",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://lazy-erin-cormorant-sari.cyclic.app/",
+  "proxy": "https://localhost:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
