--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL_PROD=https://azure-squid-yoke.cyclic.app
+REACT_APP_API_URL_PROD=https://find-the-treasure-backend.herokuapp.com
 REACT_APP_DOMAIN=https://rad-beignet-2af5da.netlify.app
